# app-ethereum

./: .clang-format  .gitignore  .gitmodules  .markdownlint.jsonc  .mdl.rb  .mdlrc  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  Doxyfile  LICENSE  Ledger Manager icon template - Moonriver.ai  Ledger Nano S icon template - Moonriver.ai  Makefile  Makefile.chainsplit  Makefile.daosend  Makefile.genericwallet  README.md  ethBase.py  getPublicKey.py  ledger_app.toml  pytest.ini  script.ld  setSelfAddress.py  signTx.py  splitEther.py
.clusterfuzzlite/: Dockerfile  build.sh
.github/: pull_request_template.md
client/: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
client/src/ledger_app_clients/ethereum/: __init__.py  address_book.py  client.py  command_builder.py  dynamic_networks.py  enum_value.py  gating.py  gcs.py  keychain.py  ledger_pki.py  proxy_info.py  response_parser.py  safe.py  settings.py  status_word.py  tlv.py  token_info.py  trusted_name.py  tx_auth_7702.py  tx_simu.py  utils.py
client/src/ledger_app_clients/ethereum/eip712/: InputData.py  __init__.py  struct.py
client/src/ledger_app_clients/ethereum/keychain/: calldata.pem  domain_name.pem  dynamic_network.pem  gating.pem  network.pem  nft.pem  safe.pem  set_plugin.pem  w3c.pem
doc/: apdu.md  eip712.md  eth_contract_support_embedded.adoc  eth_contract_support_embedded.asc  eth_starkware_extensions.adoc  eth_starkware_extensions.asc  ethapp.adoc  ethapp.asc  ethapp_plugins.adoc  ethapp_plugins.asc  gcs.md  tlv_structs.md
examples/: ethBase.py  getPublicKey.py  setSelfAddress.py  signAuthorizationEIP7702.py  signMessage.py  signMessageEIP711v0.py  signTx.py  splitEther.py
fuzzing/: CMakeLists.txt  README.md  coverage.sh  fuzzer_tlv.c
icons/: OKC Ledger Manager icon template.ai  OKC Ledger Nano icon template.ai
makefile_conf/: features.mk
size_estimation/: lang_size_report.md
src/: apdu_constants.h  base64.c  base64.h  chainConfig.h  chain_config.c  chain_config.h  common_ui.h  ethUstream.c  ethUstream.h  ethUtils.c  ethUtils.h  eth_plugin_handler.c  eth_plugin_handler.h  eth_plugin_interface.h  eth_plugin_internal.c  eth_plugin_internal.h  eth_plugin_ui.c  eth_swap_lib_calls.h  eth_swap_utils.c  eth_swap_utils.h  explorer_info.h  explorers.c  explorers.h  extra_tokens.c  extra_tokens.h  glyphs.c  glyphs.h  handle_check_address.c  handle_check_address.h  handle_get_printable_amount.c  handle_get_printable_amount.h  handle_swap_sign_transaction.c  handle_swap_sign_transaction.h  hash_bytes.c  hash_bytes.h  lang_de.c  lang_de.h  lang_es.c  lang_es.h  lang_fr.c  (+58 more)
src_bagl/: common_ui.c  ui_domain_name.c  ui_domain_name.h  ui_flow.c  ui_flow.h  ui_flow_erc20_approval.c  ui_flow_getEth2PublicKey.c  ui_flow_getPublicKey.c  ui_flow_performPrivacyOperation.c  ui_flow_signAuthorization7702.c  ui_flow_signMessage.c  ui_flow_signMessage.h  ui_flow_signMessage712.c  ui_flow_signMessage712_v0.c  ui_flow_signTx.c  ui_flow_stark_getPublicKey.c  ui_flow_stark_sign.c  ui_flow_stark_unsafe_sign.c  ui_gcs.c  ui_plugin.c  ui_plugin.h  ui_trusted_name.c  ui_trusted_name.h
src_chainsplit/: main.c
src_common/: asset_info.h  caller_api.h  common_utils.c  common_utils.h  ethUstream.c  ethUstream.h  ethUtils.c  ethUtils.h  eth_plugin_interface.h  extra_info.h  hash_bytes.c  hash_bytes.h  mem.c  mem.h  mem_utils.c  mem_utils.h  network.c  network.h  plugin_utils.c  plugin_utils.h  plugins.c  plugins.h  tokens.h  tx_content.h  uint128.c  uint128.h  uint256.c  uint256.h  uint_common.c  uint_common.h  utils.c
src_daosend/: main.c
src_genericwallet/: chainConfig.h  main.c  tokens.c  tokens.h  u2f_io.c  u2f_io.h  u2f_processing.c  u2f_processing.h  u2f_service.c  u2f_service.h  u2f_timer.h  u2f_transport.c  u2f_transport.h  usbd_hid_impl.c  usbd_hid_impl.h
src_nbgl/: network_icons.c  network_icons.h  ui_712_common.c  ui_712_common.h  ui_account.c  ui_approve_tx.c  ui_blind_signing.c  ui_confirm_parameter.c  ui_confirm_parameter_selector.c  ui_confirm_selector.c  ui_display_privacy.c  ui_gcs.c  ui_get_eth2_public_key.c  ui_get_public_key.c  ui_get_stark_public_key.c  ui_home.c  ui_idle.c  ui_message_signing.c  ui_message_signing.h  ui_nbgl.h  ui_no_7702.c  ui_no_7702_whitelist.c  ui_safe_account.c  ui_settings.c  ui_sign_712.c  ui_sign_712_v0.c  ui_sign_authorization_7702.c  ui_sign_message.c  ui_sign_revocation_7702.c  ui_signing.c  ui_signing.h  ui_stark_limit_order.c  ui_stark_transfer.c  ui_stark_unsafe_sign.c  ui_tx_simulation.c  ui_utils.c  ui_warning_contract_data.c
src_plugin_sdk/: CHANGELOG.md  README.md  main.c  plugin_utils.c  plugin_utils.h  standard_plugin.mk  utils.c
src_plugins/: swap_with_calldata_plugin.c
src_plugins_sdk/: plugin_main.c  plugin_main.h
src_tmp/: app_cx_sha3.c  app_cx_sha3.h
src_usb/: usbd_conf.c  usbd_conf.h  usbd_customhid_if_template.c  usbd_customhid_if_template.h  usbd_desc.c  usbd_desc.h
tests/: build_local_test_elfs.sh  globalsetup.js  jest.config.js  jest.js  package.json  setupTests.js
tests/fuzzing/: CMakeLists.txt  README.md  local_run.sh
tests/fuzzing/harness/: fuzz_calldata.c  fuzz_eip712.c  fuzz_eip7702.c  fuzz_gating.c  fuzz_generic_parser.c  fuzz_networks.c  fuzz_nft.c  fuzz_plugin_eip7002.c  fuzz_plugin_eip7251.c  fuzz_plugin_erc1155.c  fuzz_plugin_erc20.c  fuzz_plugin_erc721.c  fuzz_plugin_eth2.c  fuzz_plugin_swap_calldata.c  fuzz_proxy.c  fuzz_safe.c  fuzz_trusted_names.c  fuzz_tx_check.c
tests/fuzzing/macros/: add_macros.txt  exclude_macros.txt
tests/fuzzing/mock/: mock.c  mocks.h  net_icons.gen.h
tests/fuzzing/src/: fuzz_app_eth.c  fuzz_utils.c  fuzz_utils.h  fuzzer.c  mock.c
tests/unit/: .gitignore  CMakeLists.txt  Makefile  README.md  demo_tu.c  gen_coverage.sh
tests/unit/mocks/: field_validation_mocks.c  mock.c  nbgl_use_case.h  os.h
tests/unit/src/: test_field_validation.c  test_param_network.c  test_param_raw.c  test_param_trusted_name.c
tests/unit/tests/: demo.c  utils.c
tools/: build_sdk.py  build_sdk.sh  client  copy_clones.sh  copy_exchange.sh  decode_apdu.py  function_selectors.json  gen_dynamic_network.py  (+5 more)
(+820 files in other folders)
